Configuración de los pom.xml