@@ -11,8 +11,10 @@
 	<name>BookExamples</name>
 
 	<properties>
+		<maven.compiler.source>21</maven.compiler.source>
+		<maven.compiler.target>21</maven.compiler.target>
+		<maven.compiler.release>21</maven.compiler.release>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>17</java.version>
 	</properties>
 	
 	<dependencies>
@@ -51,11 +53,9 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.8.1</version>
+					<version>3.11.0</version>
 					<configuration>
-						<source>${java.version}</source>
-						<target>${java.version}</target>
-						<compilerArgs>--enable-preview</compilerArgs>
+						<release>21</release>
 					</configuration>
 				</plugin>
 				<plugin>
